# MLogo

./: .flake8  .gitignore  .gitpod.Dockerfile  .gitpod.yml  .pre-commit-config.yaml  README.md  mkdocs.yml  pyproject.toml  renovate.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SECURITY.md  label-commenter-config.yml  labels.yml  stale.yml
.github/ISSUE_TEMPLATE/: bug_report.yaml  config.yml  docs.yaml  feature_request.yaml
.github/workflows/: cd.yml  ci.yml  codecov.yml  greetings.yml  label-commenter.yml  labels.yml  license.yml  misspell.yml  preview-docs.yml
docker/: Dockerfile.train
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md
docs/src/: model.md  siblings-or-dating.ipynb
src/app/: app.py
src/app/api/: model.py  monitor.py
src/mlogo/: __init__.py  __main__.py  configuration.py  dataset.py  model.py  training_manager.py
tests/: test_siblings_or_dating.py
